--- a/app.yaml
+++ b/app.yaml
@@ -1,17 +1,10 @@
-service: tour
+service: beta
 runtime: go112
 
 env_variables:
   GOLANGORG_CHECK_COUNTRY: true
   TOUR_ANALYTICS: |
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-11222381-5"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag("js", new Date());
-    gtag("config", "UA-11222381-5");
-    gtag("config", "UA-49880327-6");
-    </script>
+    <!-- analytics not configured -->
 
 default_expiration: "7d"
 
@@ -27,4 +20,7 @@ handlers:
   secure: always
 - url: /static
   static_dir: static
+  secure: always
+- url: /.well-known
+  static_dir: well-known
   secure: always
